--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             overflow: hidden;
             height: 100vh;
             width: 100vw;
-            touch-action: pan-y;
+            touch-action: none;
+            position: fixed;
         }
 
         .container {
@@ -61,8 +62,10 @@
             max-width: 100%;
             max-height: 100%;
             object-fit: contain;
+            object-position: top center;
             user-select: none;
             -webkit-user-select: none;
+            pointer-events: none;
         }
 
         /* Chart indicator dots */
