--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             width: 100%;
             height: 100vh;
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             justify-content: center;
         }
 
@@ -46,7 +46,7 @@
             width: 100%;
             height: 100%;
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             justify-content: center;
             opacity: 0;
             transition: opacity 0.3s ease;
@@ -59,8 +59,8 @@
         }
 
         .chart img {
-            max-width: 100%;
-            max-height: 100%;
+            width: 100%;
+            height: auto;
             object-fit: contain;
             object-position: top center;
             user-select: none;
